rename user repository

--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     compile('nl.martijndwars:web-push:3.0.1')
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
 }
